--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,13 +1,10 @@
 .profile {
     background-color: #133667 !important;
+    @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
     text-align: center;
     height: 320px;
     margin-bottom: 50px;
-    h1 {
-        font-size: 50px;
-        font-weight: 700;
-        color: white;
-    }
+
     
     img {
         border-radius: 50%;
@@ -23,4 +20,27 @@
         margin-bottom: 30px;
         height: 200px;
     }
+
+
+div{
+ 
+  width:100%;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+}
+h1{
+  font-family: 'Oswald';
+  background:url('https://media.giphy.com/media/1n75DUqo8mgfopD90Q/giphy-downsized-large.gif') center center no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size:7rem;
+  letter-spacing:10px;
+  background-size:cover;
+  margin:0px;
+  color:transparent;
+}
+
 }
