Add jaguar icon in the header

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,6 +1,6 @@
 <div class="profile">
-    <div class="profile-picture">
-        
+    <div class="header-image">
+            <img src="https://img.icons8.com/external-icongeek26-glyph-icongeek26/300/ffffff/external-jaguar-colombia-icongeek26-glyph-icongeek26.png"/>
     </div>
     <h1>{{ site.title }}</h1>
 </div>
