--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -5,42 +5,41 @@
     height: 320px;
     margin-bottom: 50px;
 
-    
     img {
         border-radius: 50%;
         max-width: 100%;
         max-height: 100%;
         margin-left: auto;
         margin-right: auto;
-        display: inline;        
+        display: inline;
         padding: 20px;
     }
-    
-    .profile-picture {
+
+    .header-image {
         margin-bottom: 30px;
         height: 200px;
     }
 
+    div {
 
-div{
- 
-  width:100%;
-  height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
-}
-h1{
-  font-family: 'Oswald';
-  background:url('https://media.giphy.com/media/1n75DUqo8mgfopD90Q/giphy-downsized-large.gif') center center no-repeat;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size:7rem;
-  letter-spacing:10px;
-  background-size:cover;
-  margin:0px;
-  color:transparent;
-}
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    h1 {
+        font-family: 'Oswald';
+        background: url('https://media.giphy.com/media/1n75DUqo8mgfopD90Q/giphy-downsized-large.gif') center center no-repeat;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 7rem;
+        letter-spacing: 10px;
+        background-size: cover;
+        margin: 0px;
+        color: transparent;
+    }
 
 }
