changed the source of the logo image and added styles for the logo image

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -101,6 +101,10 @@ hr {
     margin-bottom: 1em !important;
 }
 
+.logo-image{
+    height: 41px;
+}
+
 @media screen and (max-width: 768px) {
     
     .banner {
@@ -132,4 +136,6 @@ hr {
     .page h4 {
         font-size: 0.8rem !important;
     }
+
+    
 }
