--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -4,7 +4,7 @@
     height: 320px;
     margin-bottom: 50px;
     background-color: #133667; // fallback
-    background: url('https://media.giphy.com/media/1n75DUqo8mgfopD90Q/giphy-downsized-large.gif') center center no-repeat;
+    background: url('./../../assets/img/header-bg.jpg') center center no-repeat;
     background-size: cover;
 
     img {
@@ -23,7 +23,6 @@
     }
 
     div {
-
         width: 100%;
         height: 100vh;
         display: flex;
