Added navbar and updated navbar.css

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,6 +5,18 @@
                 <img src="./assets/img/mlh-prep.png" />
             </div>
         </a>
+
+        <ul class="nav-list">
+            <li><a href="#MeetThePod">Meet the Pod!</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#Map">Map</a></li>
+        </ul>
+
+        
+
+        
         
     </div>
 </header>
+
+
