--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,5 +1,6 @@
-<h2>Meet the Pod</h2>
-<div class="card-container">
+<section id = "MeetThePod">
+    <h2>Meet the Pod</h2>
+    <div class="card-container" >
     {% for item in site.data.fellows %}
     <div class="card">
         <div class="info">
@@ -9,3 +10,4 @@
     </div>
     {% endfor %}
 </div>
+</section>
