--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -1,36 +1,63 @@
 .nav-bar {
     width: 100%;
+    height: 80px;
     background-color: #133667;
     font-family: "Poppins", serif;
     font-weight: 700 !important;
     padding-top: 10px;
-}
-
-.nav-content .logo-touch-target {
-    display: inline-flex;
-    height: 60%;
-    width: 350px;
-}
-
-.nav-content .nav-logo {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 3000;
+  }
+  
+ 
+  
+  .nav-content .nav-logo {
     height: 60px;
     margin: auto;
-}
-
-.nav-logo {
-    display: flex;
+    display: inline;
     align-items: center;
-    justify-content: center;
-}
+  }
+  
+  .nav-logo img {
+    width: 130px;
+    margin: 7px 20px;
+  }
+  
+  .nav-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 18px;
+    overflow: hidden;
+    float: right;
+  }
+  
+  .nav-list li {
+    float: left;
+    margin: 0 5px;
+  }
+  
+  .nav-list li a {
+    display: inline-block;
+    padding: 15px;
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .nav-list li a:hover {
+    background-color: rgb(40, 61, 117);
+    border-radius: 15px;
+  }
 
-.nav-logo img {
-    width: 200px;
-}
-
-.nav-content nav {
-    display: block;
-    width: 100%;
-    text-align: right;
-    padding-top: 0px;
-    padding-right: 0px;
-}
+  
+   
+  
+ 
+  
+  
+  
+   
+  
+  
+  
