Make the jaguar image responsive

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -35,11 +35,16 @@
         background: url('https://media.giphy.com/media/3o85xxpDp9J4Jlv62Q/giphy.gif') center center no-repeat;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-size: clamp( 2rem, 5vw, 5rem);
+        font-size: clamp( 2rem, 5vw, 4rem);
         letter-spacing: 6px;
         background-size: cover;
         margin: 0px;
         color: transparent;
     }
 
+    @media screen and (max-width: 768px) {
+        img {
+            max-height: 90%;
+        }
+    }
 }
