--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -1,6 +1,6 @@
 .nav-bar {
-    width: 100%;
-    height: 80px;
+ 
+    overflow: hidden;
     background-color: #133667;
     font-family: "Poppins", serif;
     font-weight: 700 !important;
@@ -12,7 +12,6 @@
   }
   
  
-  
   .nav-content .nav-logo {
     height: 60px;
     margin: auto;
@@ -39,16 +38,59 @@
   }
   
   .nav-list li a {
-    display: inline-block;
+    display: inline;
     padding: 15px;
     color: #fff;
     text-decoration: none;
   }
   
+  .nav-list li{
+    float: right;
+    color: #fff;
+    padding: 15px;
+  }
   .nav-list li a:hover {
     background-color: rgb(40, 61, 117);
     border-radius: 15px;
   }
+  .nav-list .icon {
+    display: none;
+  }
+  .icon{
+    display: inline;
+    color: #fff !important;
+    padding: 15px
+  }
+  
+
+  @media screen and (max-width: 600px) {
+    .nav-list li {display: none;}
+    .nav-list .icon {
+      float: right; 
+      display: inline;
+      padding: 15px;
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .nav-list.responsive :not(:first-child) {position: relative;}
+    .nav-list.responsive .icon {
+      display: inline;
+      position: absolute;
+      top: 0; right: 0;
+    }
+    .nav-list.responsive li {
+      margin: 15px;
+      float: none;
+      display: block;
+      text-align: right;
+    }
+    
+  }
+
+  
 
   
    
