--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -101,6 +101,13 @@ hr {
     margin-bottom: 1em !important;
 }
 
+#see-more-link {
+    display: flex; 
+    justify-content:center; 
+    align-items: center; 
+    font-size: 1.2em;
+  }
+
 @media screen and (max-width: 768px) {
     
     .banner {
