Added styling (CSS) to the HTML code

--- a/_includes/podstatus.html
+++ b/_includes/podstatus.html
@@ -1,30 +1,51 @@
+<div class="bgimg">
+    <div align="center">
+        <h2 class="leaderboard">LeaderBoard</h2>
+    </div>
+    <div>
+        <table class="tab" align="center">
+        <tr style="line-height: 1px;">
+            <th>#</th>
+            <th>Name</th>
+            <th>Commit Track</th>
+            <th>PRs Merged</th>
+        </tr>
+        <tr style="line-height: 1px;">
+            <td>1</td>
+            <td>Ishita Kapoor</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+        <tr style="line-height: 1px;">
+            <td>2</td>
+            <td>Krisha Adeshara</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+        <tr style="line-height: 1px;">
+            <td>3</td>
+            <td>Sahiba Khan</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+        </table>
+    
+    </div>
 
-<h2>LeaderBoard</h2>
-<div>
-<table>
-    <tr>
-        <th>Rank</th>
-        <th>Name</th>
-        <th>Commit Track</th>
-        <th>PRs Merged</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Ishita Kapoor</td>
-        <td>0</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Krisha Adeshara</td>
-        <td>0</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Sahiba Khan</td>
-        <td>0</td>
-        <td>0</td>
-    </tr>
-</table>
-</div>
+    </div>
+<!-- <script>
+    function changeBg(){
+
+        const images = [
+            'url("assets\img\0_tVfyU9ekMrUkhkvb.jpg")',
+            'url("assets/img/612f90cfea72f6ee37f5472c_Learn-wallpaper-Main.jpg")',
+            'url("assets/img/Did-someone-say-new-workshop_-1200x520.png")',   
+        ]
+
+        const contain = document.getElementsByClassName('contain')
+        const bg = images[Math.floor(Math.random()*images.length)];
+        contain.style.backgroundImage = bg;
+    }
+    setInterval(changeBg, 1000)
+</script> -->
+
