Changed the background image of pod stats section

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -207,7 +207,7 @@ hr {
   }
 
   .bgimg{
-    background-image: linear-gradient(50deg, rgba(4, 12, 119, 0.271),rgba(9, 28, 92, 0.348)),url(assets/img/bg1.jpg);
+    background-image: linear-gradient(50deg, rgba(4, 12, 119, 0.271),rgba(9, 28, 92, 0.348)),url("https://campusrec.unc.edu/wp-content/uploads/2020/11/Student-Staff-Celebration-2020-Horizontal-.png");
     /* height: 100%;
     width: 100%; */
     background-position: center;
