added blog list page

--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -11,6 +11,6 @@
       </div>
     </a>
     {% endfor %}
-    <a href="" id="see-more-link">See More</a>
+    <a href="/blog-list/" id="see-more-link">See More</a>
   </div>
   
