Fix alignment in footer page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,15 @@
 <div class="footer-container">
   <div class="footer">
     <div class="footer-title">
-      <h2>Useful Links</h2>
-      <a href="#">Blog</a>
-      <a href="#">About</a>
-      <a href="#">Socials</a>
-      <a href="#">Projects</a>
+      <div class="use-left">
+        <h2>Useful Links</h2>
     </div>
-    <div class="nav-logo">
+      <a class="right-a-bit" href="#">Blog</a>
+      <a class="right-a-bit" href="#">About</a>
+      <a class="right-a-bit" href="#">Socials</a>
+      <a class="right-a-bit" href="#">Projects</a>
+    </div>
+    <div class="nav-logo nav-logo-right">
       <img src="./assets/img/mlh-prep.png" />
     </div>
   </div>
