Added mascot to the leaderboard

--- a/_includes/podstatus.html
+++ b/_includes/podstatus.html
@@ -2,7 +2,7 @@
     <div align="center">
         <h2 class="leaderboard">LeaderBoard</h2>
     </div>
-    <div>
+    <div class="score">
         <table class="tab" align="center">
         <tr style="line-height: 1px;">
             <th>#</th>
@@ -30,6 +30,9 @@
         </tr>
         </table>
     
+    </div>
+    <div class="after_img">
+        <img class="div_img" src="https://uploads-ssl.webflow.com/6283bb8d1fab6d4f7492e482/6287e2fc8823ccf281dad963_deco-chip-char.png">
     </div>
 
     </div>
