--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -206,6 +206,13 @@ hr {
     padding: 10px 5px 5px 18px;
   }
 
+  .score{
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1;
+ }
+
   .bgimg{
     background-image: linear-gradient(50deg, rgba(4, 12, 119, 0.271),rgba(9, 28, 92, 0.348)),url("https://campusrec.unc.edu/wp-content/uploads/2020/11/Student-Staff-Celebration-2020-Horizontal-.png");
     /* height: 100%;
@@ -222,5 +229,17 @@ hr {
     color: white;
     font-size: 30px;
   }
+
+ .after_img{
+    position: absolute;
+    top: 63%;
+    left: 67%;
+    z-index: 2;
+ }
+
+ .div_img{
+    height: 225px !important;
+    width: 262px !important;
+ }
 
 
