--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,13 +1,30 @@
 <section id = "MeetThePod">
     <h2>Meet the Pod</h2>
-    <div class="card-container" >
+    <div class="pod">
+        <div class="conatiner"> 
     {% for item in site.data.fellows %}
-    <div class="card">
-        <div class="info">
-            <p class="title"> {{ item.name }}</p>
-            <p class="location"> {{ item.location }}</p>
+    <div class="container">
+        <div class="card-wrapper">
+          <div class="user-pic">
+            <img src="https://duckduckgo.com/?q=avatar+image+for+profile&t=brave&iar=images&iax=images&ia=images&iai=https%3A%2F%2Fcdn5.vectorstock.com%2Fi%2F1000x1000%2F73%2F04%2Ffemale-avatar-profile-icon-round-woman-face-vector-18307304.jpg" alt="" />
+          </div>
+       
+          <div class="name">
+            <h3>{{ item.name }}</h3>
+            <p>{{ item.location }}</p>
+          </div>
+        
+          <div class="card-btn">
+            <button type="button">Follow</button>
+            <button type="button">Message</button>
+          </div>
         </div>
-    </div>
+      </div>
+      </div>
+    
+
     {% endfor %}
 </div>
+</div>
 </section>
+
