Fixed line height issue

--- a/_includes/podstatus.html
+++ b/_includes/podstatus.html
@@ -6,28 +6,13 @@
     <div class="score">
         <table class="tab" align="center">
         <thead>
-            <tr style="line-height: 1px;">
+            <tr style="line-height: 1px; border-bottom:2px solid black">
                 <th>Rank</th>
                 <th>Name</th>
                 <th>PRs Merged</th>
             </tr>
         </thead>
         <tbody id="tableData"></tbody>
-        <!-- <tr style="line-height: 1px;">
-            <td>1</td>
-            <td>Ishita Kapoor</td>
-            <td>0</td>
-        </tr>
-        <tr style="line-height: 1px;">
-            <td>2</td>
-            <td>Krisha Adeshara</td>
-            <td>0</td>
-        </tr>
-        <tr style="line-height: 1px;">
-            <td>3</td>
-            <td>Sahiba Khan</td>
-            <td>0</td>
-        </tr> -->
         </table>
     
     </div>
@@ -36,21 +21,6 @@
     </div>
 
     </div>
-<!-- <script>
-    function changeBg(){
-
-        const images = [
-            'url("assets\img\0_tVfyU9ekMrUkhkvb.jpg")',
-            'url("assets/img/612f90cfea72f6ee37f5472c_Learn-wallpaper-Main.jpg")',
-            'url("assets/img/Did-someone-say-new-workshop_-1200x520.png")',   
-        ]
-
-        const contain = document.getElementsByClassName('contain')
-        const bg = images[Math.floor(Math.random()*images.length)];
-        contain.style.backgroundImage = bg;
-    }
-    setInterval(changeBg, 1000)
-</script> -->
 
 <script>
 
