--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,19 @@
     <div class="footer-title">
       <div class="use-left">
         <h2>Useful Links</h2>
-    </div>
+      </div>
       <a class="right-a-bit" href="#">Blog</a>
       <a class="right-a-bit" href="#">About</a>
       <a class="right-a-bit" href="#">Socials</a>
       <a class="right-a-bit" href="#">Projects</a>
+    </div>
+    <div class="description">
+      <h2>
+        An intense 3 week prep program for the MLH Fellowship filled with
+        personal projects and new tech.
+        <br />
+        <a href="https://fellowship.mlh.io/programs/prep">Learn more here.</a>
+      </h2>
     </div>
     <div class="nav-logo nav-logo-right">
       <img src="./assets/img/mlh-prep.png" />
