chnages in the alignment

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="card-wrapper">
           <div class="user-pic">
-            <img src="https://duckduckgo.com/?q=avatar+image+for+profile&t=brave&iar=images&iax=images&ia=images&iai=https%3A%2F%2Fcdn5.vectorstock.com%2Fi%2F1000x1000%2F73%2F04%2Ffemale-avatar-profile-icon-round-woman-face-vector-18307304.jpg" alt="" />
+            <img src="https://conflictresolutionmn.org/wp-content/uploads/2020/01/flat-business-man-user-profile-avatar-icon-vector-4333097.jpg" alt="" />
           </div>
        
           <div class="name">
@@ -15,8 +15,8 @@
           </div>
         
           <div class="card-btn">
-            <button type="button">Follow</button>
-            <button type="button">Message</button>
+            <button type="button">Github</button>
+     
           </div>
         </div>
       </div>
