--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,36 @@
-<div class="footer-container">
-  <div class="footer">
-    <div class="footer-title">
-      <div class="use-left">
-        <h2>Useful Links</h2>
+<div class="footer-dark">
+  <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-3 item">
+                  <h3>Programs</h3>
+                  <ul>
+                      <li><a href="https://fellowship.mlh.io/programs/prep">MLH Prep</a></li>
+                      <li><a href="https://fellowship.mlh.io/programs/open-source">MLH Fellowship - OSD Track</a></li>
+                      <li><a href="https://fellowship.mlh.io/programs/software-engineering">MLH Fellowship - SDE Track</a></li>
+                      <li><a href="https://fellowship.mlh.io/programs/production-engineering">MLH Fellowship - Production Track</a></li>
+                  </ul>
+              </div>
+              <div class="col-sm-6 col-md-3 item">
+                  <h3>About</h3>
+                  <ul>
+                      <li><a href="https://mlh.io/about">Company</a></li>
+                      <li><a href="#MeetThePod">Prep 22.SUM Pod</a></li>
+                      <li><a href="#Projects">Projects</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-6 item text">
+                  <h3>MLH Prep</h3>
+                  <p>The MLH Fellowship Prep Program is a 3-week preparation program for aspiring technologists who are interested in experiencing the fellowship before committing to the full 12-weeks. You'll build out your portfolio of personal projects & experiment with new technologies by collaborating in small groups through a short hackathon sprint.</p>
+              </div>
+              <div class="col item social"><a href="https://www.facebook.com/MajorLeagueHacking"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/mlhacks"><i class="icon ion-social-twitter"></i></a><a href="https://instagram.com/mlhacks/"><i class="icon ion-social-instagram"></i></a></div>
+          </div>
+        <br>
+          <div class="nav-logo nav-logo-right item social">
+            <img src="./assets/img/mlh-prep.png" />
+          </div>
       </div>
-      <a class="right-a-bit" href="#">Blog</a>
-      <a class="right-a-bit" href="#">About</a>
-      <a class="right-a-bit" href="#">Socials</a>
-      <a class="right-a-bit" href="#">Projects</a>
-    </div>
-    <div class="description">
-      <h2>
-        An intense 3 week prep program for the MLH Fellowship filled with
-        personal projects and new tech.
-        <br />
-        <a href="https://fellowship.mlh.io/programs/prep">Learn more here.</a>
-      </h2>
-    </div>
-    <div class="nav-logo nav-logo-right">
-      <img src="./assets/img/mlh-prep.png" />
-    </div>
-  </div>
+  </footer>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
