--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -53,6 +53,13 @@ h2 {
   font-size: 1.2em;
 }
 
+.fa-linkedin {
+  color: #38c !important;
+}
+.fa-twitter {
+  color: #38c !important;
+}
+
 a {
   color: black;
 }
