--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,58 +1,92 @@
-.footer-container {
-  background-color: #133667 !important;
-  display: flex;
+.footer-dark {
+  position: absolute;
+  width:100%;
+  height: auto;
+  padding:15px 0;
+  color:#e9eff4;
+  background-color:#282d32;
 }
 
-.footer {
-  width: 80%;
-  height: 20vh;
-  display: flex;
-  flex-direction: row;
-  color: #fff;
-  flex-wrap: wrap;
-  margin: 0 auto;
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
 }
 
-.footer-title {
-  display: flex;
-  flex: 2;
-  flex-direction: column;
-  // margin-top: 2rem;
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
 }
 
-.footer-title a {
-  color: #fff;
-  text-decoration: none;
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
 }
 
-.footer-title a:hover {
-  color: orange;
+.footer-dark ul a:hover {
+  opacity: 0.9;
 }
 
-.use-left {
-  display: flex;
-  margin: 0px;
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
 }
 
-.right-a-bit {
-  padding-left: 30px;
+.footer-dark .item.text {
+  margin-bottom:36px;
 }
 
-.footer .nav-logo {
-  display: flex;
-  margin: auto;
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
 }
 
-.nav-logo-right {
-  flex: 0;
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
 }
 
-.description {
-  display: flex;
-  align-items: center;
+.footer-dark .item.social {
+  text-align:center;
 }
 
-.mlhlink {
-  display: flex;
-  align-items: center;
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align:center;
+    margin-top:20px;
+  }
+}
+
+.footer-dark .item.social > a {
+  font-size:20px;
+  width:36px;
+  height:36px;
+  line-height:36px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+  margin:0 8px;
+  color:rgb(242, 233, 233);
+  opacity:0.6;
+}
+
+.footer-dark .item.social > a:hover {
+  opacity:0.9;
+}
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+  opacity:0.3;
+  font-size:13px;
+  margin-bottom:0;
 }
