--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,9 @@
 <header class="nav-bar">
-    <div class="nav-content">
-        <a href="{{ '/' | relative_url }}">
-            <div class="nav-logo">
-                <img src="./assets/img/mlh-prep.png" />
-            </div>
-        </a>
-        
-    </div>
+  <div class="nav-content">
+    <a href="{{ '/' | relative_url }}">
+      <div class="nav-logo">
+        <img src="./assets/img/mlh-prep.png" alt="MLH Prep Logo" />
+      </div>
+    </a>
+  </div>
 </header>
