--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,15 @@
 ---
 layout: page
 ---
+
+<!-- This page displays individual blog -->
 <!DOCTYPE html>
 <html lang="en">
-<body>
+  <body>
     <div class="blog-heading">
-        <p class="author">{{page.author}}</p>
-        <p class="dates">{{ page.date | date_to_long_string }}</p>
+      <p class="author">{{page.author}}</p>
+      <p class="dates">{{ page.date | date_to_long_string }}</p>
     </div>
-    <div class="blog-content">
-        {{content}}
-    </div>
-</body>
+    <div class="blog-content">{{content}}</div>
+  </body>
 </html>
