--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -19,9 +19,28 @@
     color: rgb(168, 162, 162);
     font-weight: 600;
     letter-spacing: 0.05em;
+    transition: all 300ms ease-in-out 0ms;
   }
 }
 
 .blog-content {
   margin: 0.5rem;
+}
+
+.blogs_see-more {
+  color: #133667;
+}
+
+.blog-card {
+  transition: all 300ms ease-in-out 0ms;
+}
+
+.blog-card:hover {
+  background-color: #133667;
+  color: white;
+  font-size: 1.25rem;
+
+  .dates {
+    color: white;
+  }
 }
