--- a/_includes/description.html
+++ b/_includes/description.html
@@ -2,29 +2,33 @@
     <h2>Meet the Pod</h2>
     <div class="pod">
         <div class="conatiner"> 
+          <div class="row">
     {% for item in site.data.fellows %}
-    <div class="container">
-        <div class="card-wrapper">
-          <div class="user-pic">
-            <img src="https://conflictresolutionmn.org/wp-content/uploads/2020/01/flat-business-man-user-profile-avatar-icon-vector-4333097.jpg" alt="" />
-          </div>
-       
-          <div class="name">
-            <h3>{{ item.name }}</h3>
-            <p>{{ item.location }}</p>
-          </div>
-        
-          <div class="card-btn">
-            <button type="button">Github</button>
-     
-          </div>
+  
+   
+      <div class="column">
+    <div class="card">
+      <div class="content">
+        <div class="front">
+          <img class="profile" width="100%" src="https://www.clipartkey.com/mpngs/m/118-1188761_avatar-cartoon-profile-picture-png.png" alt="Neymar">
+          <h2>{{ item.name }}</h2>
+        </div>
+        <div class="back from-left">
+          <h2>{{ item.name }}</h2>
+          <p> {{ item.location }}</p>
+          <br>
+          <button> Github </button>
         </div>
       </div>
-      </div>
-    
+    </div>
+  </div>
+
 
     {% endfor %}
+  </div>
 </div>
 </div>
 </section>
 
+ 
+  
