--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -155,127 +155,149 @@ $avatar-size: 20px;
 }
 
 
+
+// for the profile pictures
+
 .pod{
 
- 
-
-h3 {
-  font-size: larger;
-  color: rgb(66, 66, 66);
-}
-p {
-  color: rgb(136, 136, 136);
-}
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 35vh;
-}
-.container h1 {
-  position: relative;
-  color: white;
-  font-size: 150px;
-  opacity: 0.2;
-}
-.card-wrapper {
-  position: relative;
-  height: 180px;
-  width: 300px;
-  background-color: white;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  transition: 0.5s;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
-}
-.card-wrapper:hover {
-  height: 420px;
-  width: 350px;
-  transition: 0.5s;
-}
-.card-wrapper:hover .user-pic {
-  height: 250px;
-  width: 250px;
-  transition: 0.5s;
-}
-.user-pic {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  margin: auto;
-  top: -75px;
-  width: 150px;
-  height: 150px;
-  background-color: #c850c0;
-  border-radius: 10px;
-  box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.35);
-  overflow: hidden;
-  transition: 0.5s;
-}
-.user-pic img {
-
-  height: 112%;
-
-  display: inline;
-
-}
-.name {
-  text-align: center;
-  position: relative;
-  top: 100px;
-  transition: 0.5s;
-}
-.card-wrapper:hover .name {
-  top: 200px;
-}
-.social-details {
-  position: relative;
-  top: 100px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  gap: 30px;
-  opacity: 0;
-  transition: 0.5s;
-}
-.card-wrapper:hover .social-details {
-  opacity: 1;
-  position: relative;
-  top: 200px;
-}
-.card-btn {
-  position: relative;
-  top: 200px;
-  display: flex;
-  justify-content: space-evenly;
-  gap: 30px;
-  padding: 0 50px;
-  opacity: 0;
-  transition: 0.1s;
-}
-.card-wrapper:hover .card-btn {
-  opacity: 1;
-  transition-delay: 0.3s;
-}
-.card-btn button {
-  width: 100px;
-  padding: 5px 10px;
-  font-size: medium;
-  font-family: "Poppins", sans-serif;
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid rgb(136, 136, 136);
-  color: rgb(136, 136, 136);
-  transition: 0.3s;
-}
-.card-btn button:hover {
-  color: white;
-  background-color: #c850c0;
-  transition: 0.3s;
-  border: 1px solid white;
-}
+  * {
+    box-sizing: border-box;
+  }
+  .title{
+    font-size:60px;
+    padding:20px 0px;
+  }
+  body {
+    font-family: 'Lato', sans-serif;
+    background-color:#eaeaea;
+  }
+  .container{
+    width:900px;
+    margin:0px auto;
+  }
+  /* Float three columns side by side */
+  .column {
+    float: left;
+    width: 33.33%;
+    padding: 0 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding */
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive columns */
+  @media screen and (max-width: 700px) {
+    
+   .container{
+    width: 100%;
+  }
+    
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 5px;
+    text-align: center;
+    background-color: #fff;
+    border-radius:10px;
+    cursor:pointer;
+  }
+  .card .profile{
+     border-radius:10px;
+     transition: 0.2s;
+  }
+  .card:hover .profile{
+    transform:scale(1.4);
+    border-top-right-radius:50px;
+    border-top-left-radius:50px;
+  }
+  
+  .card .content{
+    width:100%;
+    height:100%;
+    position:relative;
+    overflow:hidden;
+  }
+  .card .content .back{
+    position:absolute;
+    width:100%;
+    height:100%;
+    background-color: #f1f1f1e6;
+    transition:1s;
+    
+    z-index:1;
+    padding:10px;
+  }
+  
+  .from-left{
+    top:0;
+    left:-100%;
+  }
+  .card:hover .content .from-left {
+     left:0%;
+  }
+  
+  .from-bottom{
+    top:100%;
+    left:0;
+  }
+  .card:hover .content .from-bottom {
+     top:0%;
+  }
+  
+  .from-right{
+    top:0%;
+    right:-100%;
+  }
+  .card:hover .content .from-right {
+     right:0;
+  }
+  
+  .card .content .back h3{
+    font-size:15px;
+    letter-spacing:2px;
+  }
+  .card .content .back .tem-img{
+    border-radius:100%;
+  }
+  
+  .card .content .back .des{
+    font-size:13px;
+    padding:20px 0px;
+  }
+  .card .content .back .social-icon{
+    list-style:none;
+    margin:0px;
+    padding:0px;
+  }
+  .card .content .back .social-icon li{
+    display:inline-block;
+  }
+  
+  .card .content .back .social-icon li a{
+    display:block;
+    background:#333;
+    color:#fff;
+    width:40px;
+    height:40px;
+    text-align:center;
+    line-height:40px;
+    border-radius:100%;
+  }
+  
+  
 
 }
