--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="nav-bar">
   <a href="{{ '/' | relative_url }}">
     <div class="nav-logo">
-      <img src="./assets/img/mlh-prep.png" />
+      <img height="30px" src="./assets/img/mlh-prep.png" />
     </div>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
