--- a/_includes/description.html
+++ b/_includes/description.html
@@ -10,7 +10,7 @@
     <div class="card">
       <div class="content">
         <div class="front">
-          <img class="profile" width="100%" src="https://www.clipartkey.com/mpngs/m/118-1188761_avatar-cartoon-profile-picture-png.png" alt="Neymar">
+          <img class="profile" width="100%" src="https://www.clipartkey.com/mpngs/m/118-1188761_avatar-cartoon-profile-picture-png.png" >
           <h2>{{ item.name }}</h2>
         </div>
         <div class="back from-left">
