--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -162,3 +162,12 @@ $avatar-size: 20px;
   color: rgb(255, 255, 255);
   font-weight: 500;
 }
+
+#preloader {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  background: #133667 url(/assets/img/preloader-image.gif) no-repeat center center;
+  z-index: 4000;
+  transition: 1s ease;
+}
