--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -4,8 +4,8 @@
 @import "profile";
 @import "page";
 @import "footer";
-@import 'blog';
-@import 'blog-list';
+@import "blog";
+@import "blog-list";
 
 html {
   scroll-behavior: smooth;
@@ -56,7 +56,7 @@ h2 {
   font-size: 1.2em;
 }
 
-.card:hover{
+.card:hover {
   background-color: #cacbcc82;
   transition: 1s;
 }
@@ -164,10 +164,34 @@ $avatar-size: 20px;
 }
 
 #preloader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 4000;
   height: 100vh;
   width: 100%;
   position: fixed;
-  background: #133667 url(/assets/img/preloader-image.gif) no-repeat center center;
-  z-index: 4000;
-  transition: 1s ease;
+  background: #133667;
+  transition: all 2s ease-in-out;
+}
+
+#preloader img,
+#preloader h2 {
+  animation: preloader 4s normal;
+}
+
+#preloader h2 {
+  font-size: 2rem;
+  color: white;
+  text-transform: uppercase;
+}
+
+@keyframes preloader {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
