--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -106,6 +106,11 @@ hr {
     height: 41px;
 }
 
+#map{
+    height: 400px;
+    width: 100%;
+}
+
 @media screen and (max-width: 768px) {
     
     .banner {
